# bambooclaw-core

./: .coderabbit.yaml  .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  NOTICE  README.md  RUN_TESTS.md  TESTING_TELEGRAM.md  clippy.toml  docker-compose.yml  output.md  package.json  quick_test.sh  test_telegram_integration.sh
.gemini/: style-guide.md
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-app.yml  main-branch-flow.md  pr-auto-response.yml  pub-docker-img.yml  pub-release.yml  sync-contributors.yml
benches/: agent_benchmarks.rs
crates/robot-kit/: Cargo.toml  PI5_SETUP.md  README.md  robot.toml
crates/robot-kit/src/: emote.rs  lib.rs  listen.rs  look.rs  speak.rs  traits.rs
dev/: README.md  ci.sh  cli.sh  config.template.toml  docker-compose.ci.yml  docker-compose.yml
docs/: README.ja.md  README.md  README.ru.md  README.zh-CN.md  SUMMARY.md  actions-source-policy.md  adding-boards-and-tools.md  agnostic-security.md  arduino-uno-q-setup.md  audit-logging.md  channels-reference.md  commands-reference.md  config-reference.md  custom-providers.md  docs-inventory.md  frictionless-security.md  hardware-peripherals-design.md  langgraph-integration.md  matrix-e2ee-guide.md  mattermost-setup.md  network-deployment.md  nucleo-setup.md  one-click-bootstrap.md  operations-runbook.md  pr-workflow.md  project-triage-snapshot-2026-02-18.md  providers-reference.md  proxy-agent-playbook.md  resource-limits.md  reviewer-playbook.md  sandboxing.md  security-roadmap.md  troubleshooting.md  zai-glm-setup.md
docs/datasheets/: arduino-uno.md  esp32.md
docs/getting-started/: README.md
docs/hardware/: README.md
docs/operations/: README.md
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
firmware/zeroclaw-arduino/: zeroclaw-arduino.ino
firmware/zeroclaw-esp32/: Cargo.toml  README.md  SETUP.md
firmware/zeroclaw-esp32-ui/: Cargo.toml  README.md
firmware/zeroclaw-esp32-ui/src/: main.rs
firmware/zeroclaw-esp32-ui/ui/: main.slint
firmware/zeroclaw-esp32/src/: main.rs
firmware/zeroclaw-nucleo/: Cargo.toml
firmware/zeroclaw-nucleo/src/: main.rs
firmware/zeroclaw-uno-q-bridge/: app.yaml
firmware/zeroclaw-uno-q-bridge/python/: main.py  requirements.txt
firmware/zeroclaw-uno-q-bridge/sketch/: sketch.ino
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_validation.rs
python/: README.md  pyproject.toml
python/tests/: test_tools.py
python/zeroclaw_tools/: __init__.py  __main__.py  agent.py
python/zeroclaw_tools/integrations/: discord_bot.py
python/zeroclaw_tools/tools/: __init__.py  base.py  memory.py  web.py
scripts/: bootstrap.sh  install.sh  recompute_contributor_tiers.sh
scripts/ci/: fetch_actions_data.py
src/: identity.rs  lib.rs  main.rs  migration.rs  util.rs
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: main.rs
src/agent/: agent.rs  loop_.rs  prompt.rs
src/auth/: openai_oauth.rs
src/channels/: dingtalk.rs  discord.rs  email_channel.rs  irc.rs  lark.rs  linq.rs  mod.rs  qq.rs  telegram.rs  whatsapp.rs  whatsapp_storage.rs  whatsapp_web.rs
src/config/: schema.rs
src/cost/: tracker.rs
src/cron/: mod.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: mod.rs
src/hardware/: mod.rs
src/heartbeat/: engine.rs
src/integrations/: mod.rs
src/memory/: lucid.rs  response_cache.rs  snapshot.rs
src/observability/: otel.rs  prometheus.rs
src/onboard/: wizard.rs
src/peripherals/: arduino_flash.rs  arduino_upload.rs  mod.rs  nucleo_flash.rs  uno_q_bridge.rs  uno_q_setup.rs
src/providers/: anthropic.rs  compatible.rs  copilot.rs  gemini.rs  glm.rs  mod.rs  openai.rs  openai_codex.rs  openrouter.rs
src/runtime/: docker.rs  native.rs  wasm.rs
src/security/: audit.rs  mod.rs  policy.rs  secrets.rs
src/service/: mod.rs
src/skillforge/: integrate.rs  mod.rs  scout.rs
src/skills/: mod.rs
src/tools/: browser.rs  composio.rs  file_read.rs  file_write.rs  image_info.rs  mod.rs  proxy_config.rs  schema.rs  shell.rs
tests/: agent_e2e.rs  agent_loop_robustness.rs  channel_routing.rs  config_persistence.rs  dockerignore_test.rs  memory_comparison.rs  memory_restart.rs  provider_resolution.rs  provider_schema.rs  whatsapp_webhook_security.rs
