# Cargo.toml for the BambooClaw Companion App (Tauri backend)
# This file defines the Rust crate's metadata, dependencies, and build profiles.

# CRITICAL: This empty workspace declaration is mandatory.
# It prevents Cargo from mistakenly linking this crate to a parent workspace,
# which can cause build conflicts in monorepo or complex project structures.
[workspace]

[package]
name = "bambooclaw-app"
version = "0.1.0"
description = "BambooClaw Companion: Installer and manager for BambooClaw AI Edge Agents"
authors = ["Bamboo Synergy Technologies"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bamboosynergy/bambooclaw-companion"
edition = "2021"
rust-version = "1.70"

# Defines the binary executable for the application.
[[bin]]
name = "bambooclaw-app"
path = "src/main.rs"

# Dependencies required during the build process (e.g., for codegen).
[build-dependencies]
# Tauri's build dependency, necessary for integrating with the frontend.
tauri-build = { version = "1.5", features = [] }

# Core dependencies for the application's runtime logic.
[dependencies]
# The main Tauri framework library.
# "custom-protocol" is enabled for serving assets from the application binary.
tauri = { version = "1.6", features = ["shell-open"] }

# Serialization and deserialization framework.
# The "derive" feature enables attribute-based (de)serialization.
serde = { version = "1.0", features = ["derive"] }
# JSON serialization support for the Serde framework.
serde_json = "1.0"

# Asynchronous runtime for high-performance I/O operations.
# "full" enables all features, including networking, file I/O, and timers,
# which is useful for managing downloads and background processes.
tokio = { version = "1.35", features = ["full"] }

# Cross-platform library to find standard system directories like home, config, etc.
# Essential for storing configuration files and downloaded binaries consistently.
dirs = "5.0"

# A powerful and ergonomic HTTP client.
# The "stream" feature is crucial for downloading large files (like agent binaries)
# efficiently, allowing for progress tracking and reduced memory usage.
reqwest = { version = "0.11", features = ["stream"] }

# Utilities for working with asynchronous streams.
# `StreamExt` is used to process the byte stream from a `reqwest` download response.
futures-util = "0.3"

# A library to fetch system information, such as running processes.
# Used to check if BambooClaw Core or Lite agents are already running.
sysinfo = "0.30"

# A library to find executables in the system's PATH environment variable.
# Useful for detecting if a user has a previous version of an agent installed.
which = "4.4"

[features]
# This section is required to enable the Tauri custom protocol feature,
# which bundles all web assets into the final binary.
# This results in a single-file executable with no external web assets.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Configuration for `cargo build --release`

# Abort on panic for smaller binary size.
panic = "abort"

# Enable Link Time Optimization (LTO) for better whole-program optimizations.
lto = true

# Optimize for binary size ("s") rather than speed ("z" is even smaller but can be slower).
opt-level = "s"

# Reduces binary size by stripping debug symbols.
strip = true

# Use a single codegen unit to allow for more aggressive optimizations.
codegen-units = 1