# BambooClaw Companion App - Cargo.toml
# This file defines the Rust backend's metadata and dependencies for the Tauri application.
# CRITICAL: The empty [workspace] table is required for monorepo setups and must be the first item.

[workspace]

[package]
name = "bambooclaw-app"
version = "0.1.0"
description = "BambooClaw Companion: Install and manage BambooClaw Core & Lite agents."
authors = ["Bamboo Synergy Technologies"]
license = "MIT"
repository = "https://github.com/bamboosynergy/bambooclaw-installer"
edition = "2021"

# The binary definition for the application.
[[bin]]
name = "bambooclaw-app"
path = "src/main.rs"

[build-dependencies]
# Required for Tauri's build process.
tauri-build = { version = "1", features = [] }

[dependencies]
# Utility for finding the user's home directory across different operating systems.
dirs = "5"
# Asynchronous stream utilities, used here with reqwest for download progress.
futures-util = "0.3"
# The reqwest HTTP client, with streaming enabled for downloading large binaries.
reqwest = { version = "0.12", features = ["stream"] }
# Serde is a framework for serializing and deserializing Rust data structures efficiently.
serde = { version = "1.0", features = ["derive"] }
# Serde support for JSON, the data format for communication between Rust and the frontend.
serde_json = "1.0"
# A cross-platform library for getting system information, like running processes.
sysinfo = "0.30"
# The core Tauri framework dependency. The "shell-open-api" feature allows opening URLs and files in the default system application.
tauri = { version = "1", features = ["shell-open-api"] }
# An asynchronous runtime for Rust, essential for handling concurrent operations like downloads and background tasks.
tokio = { version = "1", features = ["full"] }
# A cross-platform utility to find executables in the system's PATH.
which = "4"

[features]
# By default, we enable the custom-protocol feature.
default = ["custom-protocol"]
# This feature is used by Tauri to serve frontend assets from a custom protocol
# (e.g., `tauri://localhost`) instead of a local HTTP server, enhancing security.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# `strip = true` removes debugging symbols from the binary, reducing its size.
strip = true
# `lto = true` enables Link-Time Optimization, which can improve performance and reduce binary size.
lto = true
# `opt-level = "s"` optimizes the binary for size, which is crucial for a distributable desktop application.
opt-level = "s"